--- a/app.main/build.gradle
+++ b/app.main/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
+        applicationId "com.tiny.app.main"
         minSdkVersion 11
         targetSdkVersion 23
-        applicationId "net.wequick.example.small.app.main"
         versionCode 1
         versionName "1.0"
     }
@@ -24,7 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-annotations:23.1.1'
-    // User libraries
+
     compile project(':lib.style')
 }
